# trustlayer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
core-rs/: Cargo.toml  README.md
core-rs/policies/: default.json
core-rs/src/: auth.rs  error.rs  events.rs  guardian.rs  lib.rs  metrics.rs  policy.rs  policy_watch.rs  rate_limit.rs  reflections.rs  schema.rs  server.rs
core-rs/tests/: cross_language.rs  http_events.rs  policy_watch.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
dashboard/src/: App.tsx  PolicyPane.tsx  ReflectionsPane.tsx  SessionsPane.tsx  TracesPane.tsx  api.ts  main.tsx  vite-env.d.ts
dashboard/tests/: api.test.ts  setup.ts
dashboard/tests/components/: PolicyPane.test.tsx  ReflectionsPane.test.tsx  SessionsPane.test.tsx  TracesPane.test.tsx
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  SCHEMA.md  VERSIONING.md
examples/: README.md  end_to_end_demo.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/trustlayer_mcp/: __init__.py  server.py  tools.py
mcp-server/tests/: test_server.py  test_tools.py
obsidian_vault/: README.md
obsidian_vault/01_Architecture/: ADR-001-SDK-Wedge.md  ADR-002-Hermes-Memory-Agent.md  ADR-003-Hermes-Token-Memory-Model.md  ADR-004-Cynepic-Guardian-Policy-Engine.md  ADR-005-Code-Graph-Integration.md  ADR-006-Phase-5-Dashboard-MCP.md  ADR-007-Auth-Bearer-Token.md  ADR-008-MatchSpec-Payload-Predicates.md  ADR-009-Policy-Hot-Reload.md  ADR-010-Formal-Spec-Layout.md  ADR-011-Go-SDK.md  ADR-012-OpenTelemetry-Exporter.md
obsidian_vault/02_Agent_Skills/: Guardian_Manifest.md  Hermes_Manifest.md  MCP_Server_Manifest.md
obsidian_vault/03_Memory_Traces/demo_agent/: session-A.md  session-B.md  session-C.md  session-D.md
obsidian_vault/03_Memory_Traces/researcher/: S1.md
obsidian_vault/03_Memory_Traces/summarizer/: S2.md
obsidian_vault/04_Development/: 2026-05-07-phase-2-sdks-shipped.md  2026-05-10-phase-3-hermes-shipped.md  2026-05-13-hermes-token-memory-optimisation.md  2026-05-13-phase-4-6-code-graph.md  2026-05-13-phase-4-guardian-shipped.md
obsidian_vault/05_Reflections/: reflection-2026-05-10.md  reflection-2026-05-15.md
sdks/go/: README.md  go.mod
sdks/go/examples/conformance/: main.go
sdks/go/examples/end_to_end_demo/: main.go
sdks/go/trustlayer/: auth.go  client.go  client_test.go  doc.go  guardian.go  guardian_test.go  schema.go  schema_test.go  tracer.go  tracer_test.go
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: langchain_style_agent.py  otel_exporter_demo.py
sdks/python/src/trustlayer/: __init__.py  client.py  guardian.py  instrumentation.py  otel.py  schema.py  tracer.py
sdks/python/tests/: test_client.py  test_guardian.py  test_instrumentation.py  test_otel.py  test_schema.py  test_tracer.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: agent.ts
sdks/typescript/src/: auth.ts  client.ts  guardian.ts  index.ts  instrumentation.ts  schema.ts  tracer.ts
sdks/typescript/tests/: client.test.ts  guardian.test.ts  schema.test.ts  tracer.test.ts
skills/hermes/: README.md  __init__.py  cli.py  code_graph.py  hermes_agent.py  pyproject.toml  reflector.py  render.py
skills/hermes/tests/: conftest.py  test_agent.py  test_cli.py  test_code_graph.py  test_optimisation.py  test_reflector.py  test_render.py
spec/: README.md
spec/v0.1/: 01-wire-format.md  02-event-types.md  03-cynefin.md  04-policy-language.md  05-http-api.md  06-conformance.md  README.md
spec/v0.1/fixtures/: README.md  event-canonical-go.json
