[package]
name = "trustlayer-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "TrustLayer Rust core: AgentTraceEvent schema, CSL policy engine, cynepic-guardian."

[lib]
name = "trustlayer_core"
path = "src/lib.rs"

[[bin]]
name = "trustlayer-guardian"
path = "src/bin/guardian.rs"
required-features = ["server"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:tower-http"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
axum = { version = "0.7", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
