[package]
name = "trustlayer-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "TrustLayer Rust core: AgentTraceEvent schema, CSL policy engine, cynepic-guardian."

[lib]
name = "trustlayer_core"
path = "src/lib.rs"

[[bin]]
name = "trustlayer-guardian"
path = "src/bin/guardian.rs"
required-features = ["server"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:tower-http", "dep:subtle", "dep:notify"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
# Wait-free policy swap on the guardian hot path (ADR-009). Tiny, non-optional.
arc-swap = "1"
axum = { version = "0.7", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync"] }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
# Constant-time comparison for bearer-token auth (ADR-007). Optional so the
# library can still be used without the HTTP server pulled in.
subtle = { version = "2", optional = true, default-features = false }
# Filesystem watcher for policy hot-reload (ADR-009). Uses the OS-default
# backend (inotify / kqueue / FSEvents / ReadDirectoryChangesW).
notify = { version = "6", optional = true }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
