[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustlayer-sdk"
version = "0.1.0"
description = "Python SDK for TrustLayer observability and governance."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "TrustLayer Contributors" },
]
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trustlayer"]

[tool.hatch.build.targets.sdist]
include = ["src/trustlayer", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/trustlayer"]
